# thrust_load_testing

./: .gitmodules
arduino_thruster_load_test/: CMakeLists.txt  platformio.ini
arduino_thruster_load_test/src/: main.cpp
pc_thruster_load_test/: CMakeLists.txt  Thruster_load_test.md
pc_thruster_load_test/data/: test_output.txt
pc_thruster_load_test/include/: arduino_interface.h  usbscale.h
pc_thruster_load_test/src/: arduino_interface.cpp  main.cpp  usbscale.cpp
